--- a/src/view/user/LoginJDialog.form
+++ b/src/view/user/LoginJDialog.form
@@ -100,7 +100,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Login"/>
+        <Property name="text" type="java.lang.String" value="Inicio sesi&#xf3;n"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="LoginButton">
