--- a/src/view/user/UserJDialog.form
+++ b/src/view/user/UserJDialog.form
@@ -104,7 +104,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Registarse"/>
+        <Property name="text" type="java.lang.String" value="Registrarse"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="NombreTextField">
